Improving preview UI and fixing the ugly overflow

--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -93,30 +93,33 @@ pre {
 }
 
 .confluence-preview {
-	padding: 20px;
+  max-height: 500px;
+  max-width: 100%;
+}
+
+.confluence-content {
+	margin: 20px;
   max-height: 400px;
   max-width: 100%;
-  overflow: visible;
-	background-color: #aaaaaa;
+  overflow: auto;
+	background-color: #cccccc;
+  color: #000000;
 }
 
-.confluence-preview > h3 {
-	color: #aaaaaa;
-}
-
-.confluence-preview > table {
+.confluence-content > table {
 	background-color: #ffffff;
+  overflow:auto;
 	width: 100%;
   max-height: 100%;
 	border-collapse: collapse;
 	border: 1px solid #888888;
 }
 
-.confluence-preview tr {
+.confluence-content tr {
 	min-height: 60px;
  }
 
-.confluence-preview td {
+.confluence-content td {
  	border: 1px solid #888888;
 	padding: 4px;
 }
